# irisml

./: README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: docs.yml  release.yml  test.yml
docs/examples/: load_dataset.json  mobilenetv2_mnist_training.json  simple_training.json
irisml/core/: __init__.py  cache_manager.py  context.py  description.py  hash_generator.py  job.py  job_runner.py  task.py  task_base.py  variable.py
irisml/core/commands/: check.py  common.py  run.py  run_task.py  show.py
test/: test_cache.py  test_context.py  test_job.py  test_task.py  test_variable.py
