[metadata]
name = irisml
version = 0.0.0
description = Simple ML pipeline platform
long_description = file: README.md
long_description_content_type = text/markdown
author = irisdev
license = MIT

[options]
packages = find_namespace:
python_requires = >= 3.8
install_requires =
    azure-storage-blob
    torch

[options.entry_points]
console_scripts =
    irisml_run = irisml.core.commands.run:main
    irisml_run_task = irisml.core.commands.run_task:main
    irisml_show = irisml.core.commands.show:main

[options.packages.find]
exclude =
    test*

[flake8]
max-line-length = 200
